<resources>
    <string name="app_name">Llama 启动器</string>
    <string name="title_home">模型服务</string>
    <string name="title_chat">聊天</string>
    <string name="btn_start">启动服务</string>
    <string name="btn_stop">停止服务</string>
    <string name="btn_chat">打开聊天</string>
    <string name="btn_scan">扫描模型</string>
    <string name="hint_model">选择 GGUF 模型文件</string>
    <string name="label_threads">线程数</string>
    <string name="label_context">上下文窗口</string>
    <string name="label_max_tokens">最大输出</string>
    <string name="label_port">端口</string>
    <string name="label_host">监听地址</string>
    <string name="status_stopped">已停止</string>
    <string name="status_starting">启动中...</string>
    <string name="status_running">运行中</string>
    <string name="status_error">错误</string>
    <string name="text_ip_address">IP 地址</string>
    <string name="text_memory_usage">内存占用</string>
    <string name="text_model_info">模型信息</string>
    <string name="text_api_url">API 地址</string>
    <string name="text_wake_lock">唤醒锁已启用</string>
    <string name="text_jinja">启用 Jinja 模板</string>
    <string name="text_cache_rot">启用滚动 KV 缓存</string>
    <string name="text_mlock">锁定内存（mlock）</string>
    <string name="text_numa">NUMA 优化</string>
    <string name="chat_hint">输入消息...</string>
    <string name="chat_send">发送</string>
    <string name="chat_clear">清空</string>
    <string name="permission_rationale">需要存储权限来读取 GGUF 模型文件</string>
    <string name="no_model_found">未找到 GGUF 模型文件，请将模型放入 Download 文件夹</string>
    <string name="select_model">选择模型</string>
</resources>
